--- a/pom.xml
+++ b/pom.xml
@@ -52,4 +52,10 @@
 		<url>http://localhost:8081/repository/maven-releases/</url>
 	</repository>
 </distributionManagement>
+		<scm>
+		<connection>scm:git:https://github.com/bnasslahsen/jenkins-sample-1.git</connection>
+		<url>https://github.com/bnasslahsen/jenkins-sample-1</url>
+		<developerConnection>scm:git:https://github.com/bnasslahsen/jenkins-sample-1.git</developerConnection>
+	  <tag>HEAD</tag>
+  </scm>
 </project>
